add updating reminder handler
